# pynth

./: .gitignore  LICENSE  README.md  pyproject.toml  test.flac  test.mid  test_saw.flac  test_square.flac  test_triangle.flac
src/: code.py  output.flac
src/pynth/: cli.py  defaults.py  effects.py  envelope.py  filter.py  gui.py  main.py  midi.py  synth.py  waveform.py
