[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pynth"
version = "0.0.1"
description = "pynth is a small MIDI player made in python"
requires-python = ">=3.8"
dependencies = [
    "mido",
    "numpy",
    "soundfile",
]

[project.scripts]
pynth-cli = "pynth.cli:main"
pynth-gui = "pynth.gui:main"
