[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pynth"
version = "1.2.0"
description = "pynth is a small MIDI player made in python"
requires-python = ">=3.8"
dependencies = [
    "customtkinter",
    "mido",
    "numpy",
    "scipy",
    "sounddevice",
    "soundfile",
]

[project.scripts]
pynth = "pynth.gui:main"
